added content to right pannel
added animation icon and text and fix few bugs on profile * bio input is overlapping if using chrome browser

--- a/php/style/profile-style.css
+++ b/php/style/profile-style.css
@@ -111,9 +111,21 @@ label, input {
 
 input {
     margin-bottom: 30px;
+    height: 20px;
+
 
 }
 
 input[type="password"]{
     margin-top: 10px;
 }
+
+
+
+.btn {
+    max-width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
